# WoodchipperBot

./: .env  .gitignore  Base Game Major Bosses.txt  Core Progression Bosses.txt  Dockerfile  Great Runes.txt  README.md  attachment_parsing.py  boss_ids.p  boss_info.json  boss_info_by_id.json  boss_info_by_name.json  bot.py  main.py  pyproject.toml  requirements.txt  response_chunking.py  spoiler_log.py  two_phase_bosses.json  woodchipper.sh
Boss Lists/: Base Game Major Bosses.txt  Core Progression Bosses.txt  DLC Major Bosses.txt  Major Bosses.txt
Item Lists/: Great Runes.txt  Key Items.txt  Key Progression Items.txt  Physick Tears.txt  Smithing Stone Bell Bearings.txt
cogs/: boss_placements.py  item_placements.py  misc.py  options.py
